...
}

extension CharacterDetailViewController: UITabBarDelegate {
    
    func tabBar(_ tabBar: UITabBar, didSelect item: UITabBarItem) {
        
        let alert = UIAlertController(title: "Not implemented", message: "Not implemented yet", preferredStyle: .alert)
        
        alert.addAction(UIAlertAction(title: "Ok", style: .cancel))
        
        self.present(alert, animated: true)
        
    }
    
}
...
