...
                        </cells>
                        <connections>
                            <outlet property="dataSource" destination="87F-Fr-5wP" id="caE-5w-Hle"/>
                            <outlet property="delegate" destination="87F-Fr-5wP" id="IfA-rh-yeN"/>
                        </connections>
                    </collectionView>
                    <navigationItem key="navigationItem" title="Marvel Characters" id="NGz-Zi-K21"/>
                    <connections>
                        <outlet property="activityIndicator" destination="RR3-me-bOR" id="R9A-h1-Nh1"/>
                        <segue destination="II4-ob-d4G" kind="show" identifier="showCharacterDetail" destinationCreationSelector="makeCharacterDetailSegueAction:sender:" id="3BZ-ej-tHJ"/>
                    </connections>
                </collectionViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="F0V-cc-YRs" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
...
                                <viewLayoutGuide key="frameLayoutGuide" id="zGB-Hy-mNG"/>
                            </scrollView>
                            <tabBar contentMode="scaleToFill" barStyle="black" translatesAutoresizingMaskIntoConstraints="NO" id="qsR-bN-xjc">
                                <rect key="frame" x="0.0" y="735" width="393" height="83"/>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <items>
                                    <tabBarItem title="Comics" image="book.closed" catalog="system" id="NJQ-Nh-d8C"/>
                                    <tabBarItem title="Series" image="books.vertical" catalog="system" id="5nb-Em-hhx"/>
                                    <tabBarItem title="Stories" image="text.bubble" catalog="system" id="EgK-fb-0l3"/>
                                    <tabBarItem title="Events" image="calendar" catalog="system" id="HCx-KJ-1zq"/>
                                </items>
                                <connections>
                                    <outlet property="delegate" destination="II4-ob-d4G" id="g3q-u9-FTZ"/>
...
